--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -20,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingEnd="5dp"
-            android:paddingStart="5dp">
+            android:paddingEnd="15dp"
+            android:paddingStart="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -74,14 +74,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 app:cardBackgroundColor="@color/cardview_light_background"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="5dp">
+                android:layout_margin="5dp"
+                app:cardElevation="5dp"
+                app:cardCornerRadius="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="5dp"
                     android:textDirection="rtl">
 
                     <ImageView
@@ -99,6 +99,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
+                        android:paddingRight="10dp"
                         android:text="بهره برداری از ایستگاه دستغیب"
                         android:textStyle="bold" />
 
@@ -107,6 +108,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layoutDirection="rtl"
+                        android:paddingRight="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingBottom="10dp"
                         android:text="دستغیب دستغیب دستغیب دستغیب دستغیب دستغیب دستغیب دستغیب دستغیب دستغیب دستغیب"
                         android:textDirection="rtl" />
 
