--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgcolor"
     tools:context=".TilesActivity">
 
 
@@ -23,50 +24,182 @@
             android:paddingEnd="15dp"
             android:paddingStart="15dp">
 
-            <LinearLayout
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
+                android:layout_marginBottom="15dp"
+                android:scrollbars="none"
+                android:layout_marginTop="15dp">
 
-                <ImageView
-                    android:id="@+id/imageView445"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="2dp"
-                    android:layout_weight="1"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/action_settings"
-                    android:scaleType="fitXY"
-                    app:srcCompat="@drawable/banner" />
+                    android:orientation="horizontal">
 
-            </LinearLayout>
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/ca45r34d1"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        app:cardCornerRadius="7dp"
+                        app:cardElevation="2dp">
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginTop="2dp"
-                android:layout_weight="1"
-                android:background="?android:attr/listDivider" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/bgwhite"
+                            android:orientation="vertical"
+                            android:textDirection="rtl">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="5dp"
-                android:textDirection="rtl">
+                            <ImageView
+                                android:id="@+id/imageVd7iedfdfdffdw4"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
+                                android:adjustViewBounds="true"
+                                android:contentDescription="@string/action_settings"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/flower" />
+
+                            <TextView
+                                android:id="@+id/textd9fdfdView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right"
+                                android:paddingEnd="8dp"
+                                android:paddingStart="8dp"
+                                android:textColor="@color/titlecolor"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:text="بهره برداری ایستگاه"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/ca45r34d1"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        app:cardCornerRadius="7dp"
+                        app:cardElevation="2dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/bgwhite"
+                            android:orientation="vertical"
+                            android:textDirection="rtl">
+
+                            <ImageView
+                                android:id="@+id/imageVd7iedfdfdffdw4"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
+                                android:adjustViewBounds="true"
+                                android:contentDescription="@string/action_settings"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/earch" />
+
+                            <TextView
+                                android:id="@+id/textd9fdfdView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right"
+                                android:paddingEnd="8dp"
+                                android:paddingStart="8dp"
+                                android:textColor="@color/titlecolor"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:text="بهره برداری ایستگاه"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/ca45r34d1"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        app:cardCornerRadius="7dp"
+                        app:cardElevation="2dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/bgwhite"
+                            android:orientation="vertical"
+                            android:textDirection="rtl">
+
+                            <ImageView
+                                android:id="@+id/imageVd7iedfdfdffdw4"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
+                                android:adjustViewBounds="true"
+                                android:contentDescription="@string/action_settings"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/fun" />
+
+                            <TextView
+                                android:id="@+id/textd9fdfdView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right"
+                                android:paddingEnd="8dp"
+                                android:paddingStart="8dp"
+                                android:textColor="@color/titlecolor"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:text="بهره برداری ایستگاه"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/ca45r34d1"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        app:cardCornerRadius="7dp"
+                        app:cardElevation="2dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/bgwhite"
+                            android:orientation="vertical"
+                            android:textDirection="rtl">
+
+                            <ImageView
+                                android:id="@+id/imageVd7iedfdfdffdw4"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
+                                android:adjustViewBounds="true"
+                                android:contentDescription="@string/action_settings"
+                                android:scaleType="fitXY"
+                                app:srcCompat="@drawable/flower" />
+
+                            <TextView
+                                android:id="@+id/textd9fdfdView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right"
+                                android:paddingEnd="8dp"
+                                android:paddingStart="8dp"
+                                android:textColor="@color/titlecolor"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:text="بهره برداری ایستگاه"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
 
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="اخبار مترو" />
-
-            </LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card1"
@@ -74,6 +207,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="5dp"
+                android:layout_marginTop="15dp"
                 app:cardBackgroundColor="@color/cardview_light_background"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp">
@@ -117,113 +251,6 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="0.4"
-                        app:cardCornerRadius="5dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:textDirection="rtl">
-
-                            <ImageView
-                                android:id="@+id/imageVdiedfdw4"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:adjustViewBounds="true"
-                                android:contentDescription="@string/action_settings"
-                                android:scaleType="fitXY"
-                                app:srcCompat="@drawable/flower" />
-
-                            <TextView
-                                android:id="@+id/textView4"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="TextView" />
-
-                            <TextView
-                                android:id="@+id/textView4dfdf"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="TextView" />
-
-                        </LinearLayout>
-
-                    </android.support.v7.widget.CardView>
-
-                    <ImageView
-                        android:id="@+id/imageVdiew4"
-
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="0.4"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/action_settings"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/flower" />
-
-                    <ImageView
-                        android:id="@+id/imagdiew4"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="0.4"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/action_settings"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/flower" />
-
-                    <ImageView
-                        android:id="@+id/imageV4rtdiew4"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="0.4"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/action_settings"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/flower" />
-
-                    <ImageView
-                        android:id="@+id/imageVighew45"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="0.4"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/action_settings"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/flower" />
-
-                    <ImageView
-                        android:id="@+id/imageVighewdfg45"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="0.4"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/action_settings"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/flower" />
-
-                </LinearLayout>
-            </HorizontalScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
