--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -12,6 +12,8 @@
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="0dp"
+        android:padding="0dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,16 +22,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="0dp"
             android:orientation="vertical"
-            android:paddingEnd="5dp"
-            android:paddingStart="5dp">
+            android:padding="0dp">
+
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/slide1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <me.relex.circleindicator.CircleIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="48dp" />
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:scrollbars="none"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:scrollbars="none">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -38,7 +51,7 @@
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/ca45r34d1"
-                        android:layout_width="150dp"
+                        android:layout_width="135dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         app:cardCornerRadius="7dp"
@@ -64,21 +77,22 @@
                                 android:id="@+id/textd9fdfdView4"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="8dp"
                                 android:gravity="right"
                                 android:paddingEnd="8dp"
                                 android:paddingStart="8dp"
-                                android:textColor="@color/titlecolor"
-                                android:layout_marginTop="8dp"
-                                android:layout_marginBottom="8dp"
                                 android:text="بهره برداری ایستگاه"
+                                android:textColor="@color/titlecolor"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
+
                     <android.support.v7.widget.CardView
                         android:id="@+id/ca45r34d1"
-                        android:layout_width="150dp"
+                        android:layout_width="135dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         app:cardCornerRadius="7dp"
@@ -104,21 +118,22 @@
                                 android:id="@+id/textd9fdfdView4"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="8dp"
                                 android:gravity="right"
                                 android:paddingEnd="8dp"
                                 android:paddingStart="8dp"
-                                android:textColor="@color/titlecolor"
-                                android:layout_marginTop="8dp"
-                                android:layout_marginBottom="8dp"
                                 android:text="بهره برداری ایستگاه"
+                                android:textColor="@color/titlecolor"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
+
                     <android.support.v7.widget.CardView
                         android:id="@+id/ca45r34d1"
-                        android:layout_width="150dp"
+                        android:layout_width="135dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         app:cardCornerRadius="7dp"
@@ -144,21 +159,22 @@
                                 android:id="@+id/textd9fdfdView4"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="8dp"
                                 android:gravity="right"
                                 android:paddingEnd="8dp"
                                 android:paddingStart="8dp"
-                                android:textColor="@color/titlecolor"
-                                android:layout_marginTop="8dp"
-                                android:layout_marginBottom="8dp"
                                 android:text="بهره برداری ایستگاه"
+                                android:textColor="@color/titlecolor"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
+
                     <android.support.v7.widget.CardView
                         android:id="@+id/ca45r34d1"
-                        android:layout_width="150dp"
+                        android:layout_width="135dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
                         app:cardCornerRadius="7dp"
@@ -184,13 +200,13 @@
                                 android:id="@+id/textd9fdfdView4"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:layout_marginTop="8dp"
                                 android:gravity="right"
                                 android:paddingEnd="8dp"
                                 android:paddingStart="8dp"
-                                android:textColor="@color/titlecolor"
-                                android:layout_marginTop="8dp"
-                                android:layout_marginBottom="8dp"
                                 android:text="بهره برداری ایستگاه"
+                                android:textColor="@color/titlecolor"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
