final main layout2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="bgwhite">#FFFFFF</color>
     <color name="bgblack">#000000</color>
     <color name="titlecolor">#666666</color>
+    <color name="fifafontcolor">#326296</color>
 </resources>
