--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -72,10 +72,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/tv_latestnews"
                         android:layout_width="match_parent"
                         android:textDirection="rtl"
                         android:paddingStart="10dp"
+                        android:textColor="@color/fifafontcolor"
                         android:layoutDirection="rtl"
                         android:layout_height="wrap_content"
                         android:text="@string/latest_news" />
