--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -76,6 +76,7 @@
                         android:layout_width="match_parent"
                         android:textDirection="rtl"
                         android:paddingStart="10dp"
+                        android:fontFamily="@font/farnaz"
                         android:textColor="@color/fifafontcolor"
                         android:layoutDirection="rtl"
                         android:layout_height="wrap_content"
